packages/stackedup-helper-scripts/stackedup_helper_scripts-0.0.17.tar.gz/stackedup_helper_scripts-0.0.17/src/stackedup_helper_scripts/templates/cluster-parts/security-groups.yaml
---
Description: OMBU Cluster / Security Groups

Parameters:

  StackName:
    Description: An environment name that will be prefixed to resource names.
    Type: String

  VPC:
    Description: Choose which VPC the security groups should be deployed to.
    Type: AWS::EC2::VPC::Id

Resources:

  # This security group defines who/where is allowed to access the ECS hosts
  # directly. By default we're just allowing access from the load balancer.
  # If you want to SSH into the hosts, or expose non-load balanced services you
  # can open their ports here.
  ECSHostSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Access to the ECS hosts and the tasks/containers
        that run on them
      SecurityGroupIngress:
        # Only allow inbound access to ECS from the ELB
        - SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup
          IpProtocol: '-1'
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: 4568
          ToPort: 4568
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: 22
          ToPort: 22
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: 8022
          ToPort: 8022
      Tags:
        - Key: Name
          Value: !Sub "${StackName}-ECS-Hosts"

  # This security group defines who/where is allowed to access the Application
  # Load Balancer. By default, we've opened this up to the public internet
  # (0.0.0.0/0) but can you restrict it further if you want.
  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Access to the load balancer that sits in front of ECS
      SecurityGroupIngress:
        # Allow access from anywhere to our ECS services
        - CidrIp: 0.0.0.0/0
          IpProtocol: '-1'
      Tags:
        - Key: Name
          Value: !Sub "${StackName}-LoadBalancers"

  DatabaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Access to the database
      SecurityGroupIngress:
        - SourceSecurityGroupId: !Ref ECSHostSecurityGroup
          IpProtocol: '-1'
      Tags:
        - Key: Name
          Value: !Sub "${StackName}-Databases"

  FilesystemSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Security group for EFS mount targets
      SecurityGroupIngress:
        - SourceSecurityGroupId: !Ref ECSHostSecurityGroup
          IpProtocol: tcp
          FromPort: 2049
          ToPort: 2049
      Tags:
        - Key: Name
          Value: !Sub "${StackName}-Filesystem"

Outputs:

  ECSHostSecurityGroup:
    Description: A reference to the security group for ECS hosts.
    Value: !Ref ECSHostSecurityGroup

  LoadBalancerSecurityGroup:
    Description: A reference to the security group for load balancers.
    Value: !Ref LoadBalancerSecurityGroup

  DatabaseSecurityGroup:
    Description: A reference to the security group for the database.
    Value: !Ref DatabaseSecurityGroup

  FilesystemSecurityGroup:
    Description: A reference to the security group for the filesystem.
    Value: !Ref FilesystemSecurityGroup
